vertical align fix on avatar

--- a/app/assets/stylesheets/partials/_guide-presentation-selector.scss
+++ b/app/assets/stylesheets/partials/_guide-presentation-selector.scss
@@ -63,7 +63,7 @@
       padding-right: 0.5em;
 
       .avatar {
-        vertical-align: -0.65em;
+        vertical-align: -0.75em;
         margin-right: 0.35em;
       }
     }
